[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
uart_16550 = "0.6.0"
x86_64 = "0.15.4"

[[bin]]
name = "rust-kernel"
test = true
bench = false

[package.metadata.bootimage]
run-command = [
  "qemu-system-x86_64",
  "-drive",
  "format=raw,file={}",
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false
